[package]
name = "euiv-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["debug", "derive"] }
pest = { version = "2.8.0", features = ["pretty-print"] }
pest_derive = "2.8.0"
sqlx = { version = "0.8.3", features = ["postgres"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
